@@ -118,6 +118,7 @@
                                                             </tooltip>
                                                         </Button>
                                                         <Button fx:id="add1ToDirectoryVersion" layoutX="10.0" layoutY="50.0" mnemonicParsing="false" text="Directory Version +1"/>
+                                                        <Button fx:id="nonForceRecheckShows" layoutX="8.0" layoutY="92.0" mnemonicParsing="false" text="Non-Force Recheck Shows"/>
                                                     </children>
                                                 </AnchorPane>
                                             </content>
